2005-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/packaging.html: remove SUSE & Mandrake instructions.

	* site/about/faq.html: remove info which is covered in the
	download page.
	remove TeX q&a.

	* site/about/thanks.html: move bio from FAQ.

	* nl/about/index.html: idem.

	* site/about/index.html: link to thanks.html only.

	* nl/about/index.html: use trumpet image.
	link to latest, not hardcoded version. This ensures that AUTHOR
	links stay healthy.

	* site/about/index.html: don't link features page.

	* site/about/menu-entries.py: remove Features page.

	* site/about/faq.html (href): link to sponsor, not donate

2005-11-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/news.ihtml (href): Remove stray end comment marker.

2005-11-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: add Suse 10.

2005-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/template.ihtml: add google Analytics code.

2005-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/testimonials.html (href): add Vaylor Trucks' quote. 

2005-11-13   Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/sponsor/*html: new translated files

2005-11-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* po/fr.po: Add translations for the sponsoring pages

2005-11-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* fr/about/index.html: typo.

2005-11-10  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/: updates (about/pubs, about/faq, about/index /index)

2005-11-10  Jean-Charles Malahieude  <lilyfan@wanadoo.fr>

	* fr/contact.ihtml: links updated for lilypond-user-fr list

2005-11-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/sponsor/options.html (href): sponsoring -> donation.

2005-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/sponsor/options.html: add paypal logo.

	* site/about/index.html (href): image credits.

	* site/about/faq.html: remove "how to thank question"
	remove macro drivel.

	* site/sponsor/options.html (Module): new file.
