@@ -1,0 +1,39 @@
+<h1>The name of the game</h1>
+
+
+<em>Why did we call it LilyPond?</em>
+
+<p>
+  Han-Wen: I started Lily (our affectionate name for LilyPond) in
+  1996.  Back then, I was in an amateur symphony orchestra together with
+  Jan.  I had a crush on this magnificent girl in the orchestra: her
+  name was Suzanne, she played both the flute and the cello, and (of
+  course) I thought she was very pretty.
+</p>
+
+<p>
+  At the time, Jan was dating Roos (Dutch for &lsquo;Rose&rsquo; --
+  she also played the cello).  I also knew about about a package
+  Rosegarden (a GUI MIDI sequencer and notation editor).  When I found
+  out that &lsquo;Susan&rsquo; is Hebrew for &lsquo;lily&rsquo;, I
+  decided that calling the package &lsquo;LilyPond&rsquo; would match
+  the nomenclature of the rest of my life perfectly.
+</p>
+
+<p>
+  Some things don't last---the two girls, the cellos and the
+  orchestra, all have disappeared from our lives.  LilyPond however,
+  has survived.  It is a mature package with a healthy user-base and
+  good prospects.  Best of all is, that we still have a good time
+  hacking on it
+</p>
+
+
+<p>
+Incidentally, the <a
+href="http://www.rosegarden-music.com">Rosegarden</a> package is still
+alive. Among others, it has support for LilyPond export.
+</p>
+
+<p align=right>
+Back to <a href="thanks.html">acknowledgements</a></p>
