@@ -22,8 +22,8 @@ Jan is currently working as a Programmer/Open Source specialist.  Jan
   Han-Wen interested.  When he joined in it was decided that we should
   start afresh with a completely different approach.  What we created
   is now known as LilyPond.
-  
 <p>
+  <a href="name.html">About the origin</a> of the name &lsquo;LilyPond&rsquo;
 
 <li>Graham Percival, documentation editor
 <p>
